// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text component tests Text all props 1`] = `
<Text
  style={
    Object {
      "color": "#a19f9d",
      "fontFamily": "Segoe UI",
      "fontSize": 14,
      "fontWeight": "400",
      "margin": 0,
    }
  }
>
  All props
</Text>
`;

exports[`Text component tests Text all tokens 1`] = `
<Text
  style={
    Object {
      "color": "#323130",
      "fontFamily": "Wingdings",
      "fontSize": 20,
      "fontWeight": "900",
      "margin": 0,
    }
  }
>
  All tokens
</Text>
`;

exports[`Text component tests Text default 1`] = `
<Text
  style={
    Object {
      "color": "#323130",
      "fontFamily": "Segoe UI",
      "fontSize": 12,
      "fontWeight": "400",
      "margin": 0,
    }
  }
>
  Text default
</Text>
`;

exports[`Text component tests Text variants render correctly with style 1`] = `
<Text
  style={
    Object {
      "color": "blue",
      "fontFamily": "Segoe UI",
      "fontSize": 42,
      "fontWeight": "600",
      "margin": 0,
      "marginBottom": 8,
      "marginTop": 4,
    }
  }
>
  Header Text
</Text>
`;
